tests/transpiler/x/java/cross_join_triple.error
exit status 1
Main.java:7: error: <identifier> expected
         n;
          ^
Main.java:8: error: <identifier> expected
         l;
          ^
Main.java:9: error: <identifier> expected
         b;
          ^
Main.java:10: error: <identifier> expected
        Data1( n,  l,  b) {
                ^
Main.java:10: error: <identifier> expected
        Data1( n,  l,  b) {
                    ^
Main.java:10: error: <identifier> expected
        Data1( n,  l,  b) {
                        ^
6 errors
